--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.4.0/dependency-check-8.4.0-release.zip
           unzip dependency-check-8.4.0-release.zip
           ./dependency-check/bin/dependency-check.sh --scan . --format HTML
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4  # Updated from v3 to v4
         with:
           name: dependency-report
           path: dependency-check-report.html
