--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,17 +11,20 @@ jobs:
           config: p/terraform
 
   owasp-sca:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # Changed to Windows runner
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'  # REQUIRED - specifies Java distribution
+          distribution: 'temurin'
           java-version: '17'
+      - name: Install .NET Runtime
+        run: |
+          choco install dotnet-runtime --version=6.0.0 -y
       - run: |
           wget https://github.com/jeremylong/DependencyCheck/releases/download/v8.4.0/dependency-check-8.4.0-release.zip
           unzip dependency-check-8.4.0-release.zip
-          ./dependency-check/bin/dependency-check.sh --scan . --format HTML
+          ./dependency-check/bin/dependency-check.bat --scan . --format HTML
       - uses: actions/upload-artifact@v4
         with:
           name: dependency-report
